tests/context-tests/expectations/fail/empty_body.orb.expectation
#Contains
Empty Context declaration body is not allowed. Expected one or more of the following declarations: Type, Trait